<resources>
    <string name="app_name">FamilyTracker</string>

    // activity_main
    <string name="welcome">Welcome to Family Tracker</string>
    <string name="please_login">Please login with your family account</string>
    <string name="username">Username</string>
    <string name="family_name">Family name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Or create a new family account</string>

    // activity_account
    <string name="create_here">Create your new family account</string>
    <string name="admin_email">Admin email address</string>
    <string name="password_confirm">Confirm password</string>
    <string name="create">Create !</string>

    //activity_add
    <string name="add_member">Add a family member</string>
    <string name="firstname">Firstname</string>
    <string name="dob">Date of birth</string>
    <string name="Retrieve_location">Use location</string>
    <string name="city">City</string>
    <string name="Street_number">Street and number </string>
    <string name="zip_code">ZIP-code</string>
    <string name="add">Add</string>

    //activity_relation
    <string name="add_relation">Add relation</string>
    <string name="del_relation">Delete relation</string>

    //activity_view
    <string name="view_tree">View family tree</string>
    <string name="add_new_member">Add new member</string>

</resources>
